# openmate

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  OpenCode1.17消息结构.md  OpenMate设计.md  README.md  README.zh-CN.md  TUI消息显示规则.md  analyze_session.py  opencode问题.md  revert处理.md  version.json  会话同步设计.md  删除旧代码清单.md  已处理问题.md  待处理问题.md  待跟踪问题.md
.github/workflows/: release.yml
.opencode/plans/: 1778781397395-tidy-meadow.md  1778889103035-brave-comet.md
.opencode/skills/release/: SKILL.md
.superpowers/brainstorm/: session-ui-v2.html  session-ui.html
GradleMcp/Client/: Client.csproj  Program.cs
GradleMcp/GradleMcp/: GradleMcp.csproj  GradleTools.cs  Program.cs
android/: AGENTS.md  build.gradle.kts  gradle.properties  release.keystore  settings.gradle.kts
android/app/: build.gradle.kts
android/core/common/: build.gradle.kts
android/core/data/: build.gradle.kts
android/core/database/: build.gradle.kts
android/core/domain/: build.gradle.kts
android/core/network/: build.gradle.kts
android/core/ui/: build.gradle.kts
android/docs/: refactor-connection-info.md
android/feature/instance/: build.gradle.kts
android/gradle/: libs.versions.toml
android/samples/: messages.json  messages_current_session.json  messages_with_tool_invocation.json  messages_with_tools.json  session_detail.json  session_list.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: 2026-05-27-diff-viewer-design.md  Bridge第一阶段开发计划.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  INSTALL.md  INSTALL.zh-CN.md  connection-recovery-gap-analysis.md  connection-state-machine-refactor.md  sync-log-debugging.md  tunnel-streaming.md  消息自动跟随滚动设计.md  连接管理状态机.md
docs/design/: 2026-05-27-diff-viewer-design.md  Bridge第一阶段开发计划.md  bridge-windows-gui-mockup.html  会话同步设计.md  会话计时与模型持久化设计.md  文件索引优化.md  消息自动跟随滚动设计.md  连接管理状态机.md
docs/internal/: 待跟踪问题.md
docs/specs/: 2026-05-13-android-revert-design.md
gradlemcp/: GradleMcp.slnx  GradleTools.cs  Program.cs
gradlemcp/Client/: Program.cs
gradlemcp/GradleMcp/: GradleTools.cs  Program.cs
opencode-bridge/: AGENTS.md  Cargo.toml  TODO.md  bridge.toml  bridge_err.txt  build-linux.sh  build.rs
opencode-bridge/release/: bridge.toml
opencode-bridge/src/: bridge_db.rs  browser.rs  config.rs  error.rs  lib.rs  log_capture.rs  main.rs  server.rs  service_linux.rs  service_windows.rs  state.rs  tray.rs
opencode-bridge/src/api/: autostart.rs  config.rs  devices.rs  logs.rs  mod.rs  network.rs  open_ui.rs  qrcode.rs  reset_secret.rs  shutdown.rs
opencode-bridge/src/api/autostart/: linux.rs  mod.rs  windows.rs
opencode-bridge/src/auth/: key.rs  login.rs  middleware.rs  mod.rs  pair.rs  scan.rs  token.rs
opencode-bridge/src/bridge/: router.rs
opencode-bridge/src/events/: filter.rs  mod.rs  router.rs  source.rs
opencode-bridge/src/files/: router.rs
opencode-bridge/src/fs/: mod.rs  operations.rs  path_guard.rs  router.rs  search.rs
opencode-bridge/src/gateway/: client.rs  frame.rs  mod.rs  proxy.rs  sse_proxy.rs
opencode-bridge/src/git/: mod.rs  operations.rs  router.rs
opencode-bridge/src/process/: mod.rs  opencode_manager.rs
opencode-bridge/src/proxy/: mod.rs  rest.rs  sse.rs
opencode-bridge/src/sync/: db.rs  mod.rs  router.rs  sse.rs  truncate.rs
opencode-bridge/src/ui/: download.html  index.html  mod.rs
opencode-bridge/src/update/: manager.rs  mod.rs  platform.rs  script.rs  version.rs
opencode-bridge/tests/: events_endpoint.rs  integration.rs
scripts/: .bridge_token  analyze_android_db.py  bridge_tool.py  build-release.ps1  deploy.bat  get_bridge_token.py  pull_android_db.py  release.ps1  session_tool.py  test_bridge_sse.py  test_opencode_sse.py  test_opencode_sync_event.py  test_sync_sse.py  test_sync_trigger.py  update-bridge.ps1
server/: README.md
server/docs/: phase1-relay-gateway.md  server-overview.md
server/relay-gateway/: AGENTS.md  Cargo.toml  gateway.toml
server/relay-gateway/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
server/relay-gateway/src/api/: status.rs
server/relay-gateway/src/auth/: hmac_auth.rs  middleware.rs  mod.rs
server/relay-gateway/src/proxy/: http.rs  sse.rs
server/relay-gateway/src/tunnel/: bridge.rs  frame.rs  mod.rs
server/relay-gateway/tests/: integration.rs
simulator/: .gitignore  AGENTS.md  README.md  UI_REFERENCE.md  look.py  pair.py  session.py
temp_db_dir/: instance_40def200_bc37_47f2_b57c_a49c2164c6d0
temp_db_dir2/: instance.db  parent_session.json
tools/sync-debugger/: .gitignore  AGENTS.md  build.gradle.kts  settings.gradle.kts
workhard/: design.md  index.ts  package.json  tsconfig.json
workhard/src/: config.ts  log.ts  monitor.ts
(+490 files in other folders)
