[package]
name = "openmate"
version = "0.1.0"
edition = "2024"
description = "OpenMate Bridge - proxy, process management, file serving, and authentication"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
