[package]
name = "openmate"
version = "0.1.2"
edition = "2024"
description = "OpenMate Bridge - proxy, process management, file serving, and authentication"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = "0.4"
dirs = "6"
qrcode = "0.14"
local-ip-address = "0.6"
open = "5"
hostname = "0.4"
urlencoding = "2.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
socket2 = "0.5"
rustls = { version = "0.23", features = ["ring"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Security",
] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
