[package]
name = "relay-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-stream = "0.3"
http-body-util = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.29"
getrandom = "0.3"
hmac = "0.12"
sha2 = "0.10"
